hphp/hack/test/typecheck/always_true.php.exp
File "always_true.php", line 4, characters 7-19:
This expression is always true (Typing[4151])
File "always_true.php", line 3, characters 14-23:
This is a varray and cannot be null
